add swagger docs to new routes and updated old ones
