# docs/swagger.json
@@ -1,16 +1,80 @@
 {
     "swagger": "2.0",
     "info": {
-        "title": "Life Inventory API",
+        "description": "Dokumentation der REST-API",
+        "title": "Meine API",
         "contact": {},
         "version": "1.0"
     },
-    "host": "localhost:8080",
-    "basePath": "/api/v1/",
+    "basePath": "/api/v1",
     "paths": {
+        "/auth/login": {
+            "post": {
+                "description": "Returns valid token for a user to use it for the api requests",
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Returns valid token",
+                "parameters": [
+                    {
+                        "description": "Username and password",
+                        "name": "login",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.AuthInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/auth/signup": {
+            "post": {
+                "description": "Create a user which can be used to create a token",
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Creates a user",
+                "parameters": [
+                    {
+                        "description": "Username and password",
+                        "name": "signup",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.AuthInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/entry": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Returns a list of all entries (fitting to the filters)",
+                "tags": [
+                    "Entry"
+                ],
                 "summary": "Get all entries (with filters)",
                 "parameters": [
                     {
@@ -48,7 +112,15 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Updates the entry with the given ID. The existing item will be completely overwritten by the provided data. The item will be identified by the ID of the item.",
+                "tags": [
+                    "Entry"
+                ],
                 "summary": "Update a entry",
                 "parameters": [
                     {
@@ -77,7 +149,15 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Creates a new entry",
+                "tags": [
+                    "Entry"
+                ],
                 "summary": "Create new entry",
                 "parameters": [
                     {
@@ -108,7 +188,15 @@
         },
         "/entry/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Returns exactly one entry with the given ID",
+                "tags": [
+                    "Entry"
+                ],
                 "summary": "Get a entry by ID",
                 "parameters": [
                     {
@@ -138,7 +226,15 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Deletes exactly one entry by ID",
+                "tags": [
+                    "Entry"
+                ],
                 "summary": "Delete a entry by ID",
                 "parameters": [
                     {
@@ -161,7 +257,15 @@
         },
         "/list": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Returns a list of all entries",
+                "tags": [
+                    "Entry"
+                ],
                 "summary": "Get all entries",
                 "responses": {
                     "200": {
@@ -181,6 +285,21 @@
         }
     },
     "definitions": {
+        "models.AuthInput": {
+            "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "models.CreateEntryDto": {
             "type": "object",
             "properties": {
@@ -212,5 +331,23 @@
                 }
             }
         }
-    }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "description": "Enter your token with the 'Bearer ' prefix. Example: 'Bearer eyJhbGciOi...'",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
+        }
+    },
+    "tags": [
+        {
+            "description": "All entry-related endpoints",
+            "name": "Entry"
+        },
+        {
+            "description": "Login \u0026 registration",
+            "name": "Auth"
+        }
+    ]
 }
